 cnp-deny-malware-tntbotinger-communication-7whu6p9.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-deny-malware-tntbotinger-communication"-zqhnuou
  namespace: kube-system
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56fd47777c
      k8s-app: gcp-compute-persistent-disk-csi-driver
      pod-template-generation: 1
